fix focus getting cut off

--- a/wp-content/themes/special/src/css/default-hero.css
+++ b/wp-content/themes/special/src/css/default-hero.css
@@ -11,7 +11,6 @@
 
 .hero-grid header {
   width: fit-content;
-  margin-block-end: 1.5em;
   padding: 0 2rem;
 }
 
@@ -92,7 +91,7 @@
       grid-column: 4;
       align-self: end;
       z-index: 4;
-      margin-block-end: 0;
+      margin-block-end: 0.25em;
       margin-inline-start: -2em;
       border-radius: var(--radius);
     }
